# tempeh

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/psoul/: __init__.py  config.py  duration.py  version.py
src/psoul/cli/: doctor.py  logging.py  main.py  state.py
src/tempeh/: __init__.py  version.py
src/tempeh/cli/: doctor.py  logging.py  main.py  state.py
tests/: conftest.py  test_cli_flags.py  test_cli_snapshots.py  test_color_resolution.py  test_config.py  test_doctor.py  test_duration.py  test_log_level.py  test_version.py
