[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempeh"
version = "0.0.1"
description = "A CLI and TUI Python session supervisor with batteries included."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "structlog>=24.1",
]

[project.scripts]
tempeh = "tempeh.cli.main:cli"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0",
]
test = [
    "pytest>=9.0",
    "inline-snapshot>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = ["error"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "EM101",
    "FBT",
    "PLR0913",
    "T201",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "D", "S101"]
