[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psoul"
version = "0.0.1"
description = "A CLI and TUI Python session supervisor with batteries included."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
    "agent",
    "agentic",
    "automation",
    "cli",
    "console",
    "cpu",
    "debug",
    "debugger",
    "debugging",
    "diagnostics",
    "disk",
    "env",
    "environment",
    "gpu",
    "inspect",
    "introspection",
    "lifecycle",
    "memory",
    "monitor",
    "monitoring",
    "observability",
    "process",
    "profile",
    "profiler",
    "profiling",
    "pty",
    "python",
    "ram",
    "repl",
    "resources",
    "session",
    "shell",
    "subprocess",
    "supervisor",
    "telemetry",
    "terminal",
    "tui",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "platformdirs>=4.0",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/oxenfree999/psoul"
Repository = "https://github.com/oxenfree999/psoul"
Issues = "https://github.com/oxenfree999/psoul/issues"

[project.scripts]
psoul = "psoul.cli.main:cli"

[dependency-groups]
test = [
    "pytest>=9.0",
    "inline-snapshot>=0.32",
]
lint = [
    "ruff>=0.8",
    "ty>=0.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = ["error"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "EM101",
    "FBT",
    "PLR0913",
    "T201",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "D", "PLR2004", "S101", "S108"]
